--- a/index.html
+++ b/index.html
@@ -5,22 +5,20 @@
     <title>Responsive CSS</title>
     <link rel="stylesheet" href="./style.css" type="text/css" media="all">
   </head>
-  <body>
-      <div class="MainContainer">
-          <nav>
-              This is the Nav Bar
-          </nav>
-          <div class="Content">
-              <div class="Left">
-                  Left
-              </div>
-              <div class="Center">
-                  Center
-              </div>
-              <div class="Right">
-                  Right
-              </div>
-          </div>
-      </div>
+  <body class="MainContainer">
+        <nav>
+            This is the Nav Bar
+        </nav>
+        <div class="Content">
+            <div class="Left">
+                Left
+            </div>
+            <div class="Center">
+                Center
+            </div>
+            <div class="Right">
+                Right
+            </div>
+        </div>
   </body>
 </html>
