Step 2 - in progress

--- a/index.html
+++ b/index.html
@@ -12,13 +12,22 @@
           </nav>
           <div class="Content">
               <div class="Left">
-                  Left
+                  <p>Left</p>
+                  <img src="img/bear2.png"/>
               </div>
               <div class="Center">
-                  Center
+                  <p>Center</p>
+                  <img src="img/bear1.jpeg"/>
+                  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Negat esse eam, inquit, propter se expetendam. Quae in controversiam veniunt, de iis, si placet, disseramus. Quam ob rem tandem, inquit, non satisfacit? Beatus autem esse in maximarum rerum timore nemo potest. Etsi ea quidem, quae adhuc dixisti, quamvis ad aetatem recte isto modo dicerentur.
+
+                  Erat enim res aperta. Stoici scilicet. Duo Reges: constructio interrete. Si qua in iis corrigere voluit, deteriora fecit. Bona autem corporis huic sunt, quod posterius posui, similiora. Sed emolumenta communia esse dicuntur, recte autem facta et peccata non habentur communia.
+                  
+                  Omnia contraria, quos etiam insanos esse vultis. Hoc ne statuam quidem dicturam pater aiebat, si loqui posset. Sumenda potius quam expetenda. Habes, inquam, Cato, formam eorum, de quibus loquor, philosophorum.
+              </p>
               </div>
               <div class="Right">
-                  Right
+                  <p>Right</p>
+                  <i class="fas fa-flask"></i>
               </div>
           </div>
       </div>
