--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
   <body>
       <div class="MainContainer">
           <nav>
-              This is the Nav Bar
+                <i class="fas fa-globe-americas"></i>
+              <span>This the Nav Bar</span>
           </nav>
           <div class="Content">
               <div class="Left">
                   
-                  <img src="img/bear2.png"/> Small text here
-                  <img src="img/bear2.png"/> Small text here
-                  <img src="img/bear2.png"/> Small text here
-                  <img src="img/bear2.png"/> Small text here
+                  <img src="img/bear2.png"/> <span>Small text here</span>
+                  <img src="img/bear2.png"/> <span>Small text here</span>
+                  <img src="img/bear2.png"/> <span>Small text here</span>
+                  <img src="img/bear2.png"/> <span>Small text here</span>
               </div>
               <div class="Center">
                   
